--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/style.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/style.scss
@@ -2,11 +2,13 @@
   * @author Denis Marginas
 **/
 
-@import "../scss/fonts.scss";
-@import "../scss/variables.scss";
-@import "../scss/text-elements.scss";
+@import "../scss/interface-design/fonts.scss";
+@import "../scss/interface-design/variables.scss";
+@import "../scss/interface-design/text-elements.scss";
 
-@import "../scss/header.scss";
-@import "../scss/body.scss";
-@import "../scss/footer.scss";
+@import "../scss/templates-design/templates-design.scss";
+
+@import "../scss/structure-design/header.scss";
+@import "../scss/structure-design/body.scss";
+@import "../scss/structure-design/footer.scss";
 
