--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -1,1 +1,4 @@
 @import "../templates-design/templates-design-parts/ocean-animation.scss"; 
+@import "../templates-design/templates-design-parts/section-about.scss"; 
+@import "../templates-design/templates-design-parts/section-portfolio-categories.scss"; 
+@import "../templates-design/templates-design-parts/keyframes.scss"; 
