Page: Home - in progress
- changes categories section

--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
@@ -1,22 +1,36 @@
 @import "../interface-design/screen-sizes.scss";
+@import "../functions/functions.scss";
 
 :root {
     /* ---- Colors ---- */
-    --dm-color-primary   : #5d6977;
-    --dm-color-secondary : #1b2431;
-    --dm-link-color      : var( --dm-color-primary );
+    --dm-color-primary                  : #5d6977;
+    --dm-color-secondary                : #1b2431;
+    --dm-link-color                     : var( --dm-color-primary );
 
     /* ---- Non-Colors ---- */
-    --dm-color-black     : #000000;
-    --dm-color-white     : #FFFFFF;
-    --dm-color-gray      : #222222;
+    --dm-color-black                    : #000000;
+    --dm-color-white                    : #FFFFFF;
+    --dm-color-gray                     : #222222;
+
+    /* ---- Colors RGB---- */
+    --dm-color-primary-rgb              : #{hexToRGB( #5d6977 )};
+    --dm-color-secondary-rgb            : #{hexToRGB( #1b2431 )};
+    --dm-color-highlight-primary-rgb    : #{hexToRGB( #FFD057 )};
+    --dm-color-highlight-secondary-rgb  : #{hexToRGB( #FFF2D1 )};
+
+    /* ---- Non-Colors RGB ---- */
+    --dm-color-black-rgb               : #{hexToRGB( #000000 )};
+    --dm-color-white-rgb               : #{hexToRGB( #FFFFFF )};
+    --dm-color-gray-rgb                : #{hexToRGB( #4A4B44 )};
 
     /* ---- Backgrounds ---- */
-    --dm-background-color-black             : #000000;
-    --dm-background-color-white             : #FFFFFF;
-    --dm-background-color-gray              : #4A4B44;
-    --dm-background-color-primary           : var( --dm-color-primary );
-    --dm-background-color-secondary         : var( --dm-color-secondary );
+    --dm-background-color-primary      : var( --dm-color-primary );
+    --dm-background-color-secondary    : var( --dm-color-secondary );
+
+    /* ---- Backgrounds Non-Colors ---- */
+    --dm-background-color-black        : #000000;
+    --dm-background-color-white        : #FFFFFF;
+    --dm-background-color-gray         : #4A4B44;
 
     /* ---- Border Radius ---- */
     --dm-border-radius-primary   : 6px;
