--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-about.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-about.scss
@@ -5,6 +5,7 @@
   @include container( var( --dm-spacing-large ) );
   
   > div {
+    @include padding-x();
     @include flex-row();
     @include flex-center();
     gap: var( --dm-spacing-secondary ); 
