--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/functions/mixins.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/functions/mixins.scss
@@ -5,12 +5,21 @@
  
   margin: 0 auto;
   width: 100%;
-  padding: $var var( --dm-spacing-secondary );
+  padding-top: $var;
+  padding-bottom: $var;
   max-width: 1600px;
 
   @media only screen and ( max-width: $screen-tablet-small ) {
-    padding-top: calc( $var / 2 );
-    padding-bottom: calc( $var / 2 );
+    padding-top: calc( var( $var ) / 2 );
+    padding-bottom: calc( var( $var ) / 2 );
+  }
+}
+@mixin padding-x() {
+
+  padding-left: var( --dm-spacing-secondary );
+  padding-right: var( --dm-spacing-secondary );
+
+  @media only screen and ( max-width: $screen-tablet-small ) {
     padding-left: var( --dm-spacing-primary );
     padding-right: var( --dm-spacing-primary );
   }
