Page: Home - in progress
- changes categories section
- added web development experience section

--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/functions/mixins.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/functions/mixins.scss
@@ -10,8 +10,8 @@
   max-width: 1600px;
 
   @media only screen and ( max-width: $screen-tablet-small ) {
-    padding-top: calc( var( $var ) / 2 );
-    padding-bottom: calc( var( $var ) / 2 );
+    padding-top: calc( $var  / 2 );
+    padding-bottom: calc(  $var  / 2 );
   }
 }
 @mixin padding-x() {
