--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/category-card.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/category-card.scss
@@ -42,21 +42,33 @@
         position: absolute;
         z-index: 1;
         top: 25px;
-        right: -20%;
+        right: 0%;
+        left: 65%;
+        margin: auto;
         filter: drop-shadow(0px 0px 0px rgba(34,34,34,0));
-        border: 5px solid rgba(var( --dm-color-white-rgb ), 1);
+        filter: drop-shadow(20px 20px 30px rgba( var( --dm-color-white-rgb ) , 0.4 ) );
+        border: 6px solid rgba(var( --dm-color-white-rgb ), 1);
         border-radius: 50%;
-        transition: top 0.3s, right 0.3s, filter 0.5s, border-radius 0.2s, border 0.3s;
+        background-color: rgba( var( --dm-color-primary-rgb ), 1 );
+        padding: var( --dm-spacing-primary );
+        transition: top 0.53s, right 0.5s, left 0.8s, filter 0.5s, border-radius 0.3s, border 0.37s ease-in-out, background-color 0.4s;
+
       }
       &:after {
         content: "";
-        background: rgba( var( --dm-color-primary-rgb ), 0.4 );
+        background-color: rgba( var( --dm-color-primary-rgb ), 0.4 );
         width: 0%;
-        height: 80px;
+        height: 1000%;
         position: absolute;
         right: 0;
-        top: 100%;
-        transition: width 0.6s;
+        top: 0%;
+        transition: width 0.6s, background-color 0.9s;
+      }
+      &:hover {
+        > svg {
+          filter: drop-shadow(15px 15px 16px #222) !important;
+          transition: top 0.3s, right 0.3s, left 0.8s, filter 0.5s, border-radius 0.2s, border 0.27s ease-in-out;
+        }
       }
     }
   }
@@ -106,7 +118,7 @@
       }
     }
   }
-  &:hover{
+  &:hover {
     box-shadow: 14px 14px 15px rgba(11,11,11,0.7);
     transition: box-shadow 0.4s;
 
@@ -118,11 +130,13 @@
       > a {
         > svg {
           top: 45px;
-          right: 56px;
+          right: 0%;
+          left: 0%;
           filter: drop-shadow(5px 5px 6px #222);
           border: 0px solid rgba(var( --dm-color-white-rgb ), 0);
           border-radius: 0%;
-          transition: top 0.3s, right 0.3s, filter 0.5s, border-radius 0.6s, border 0.1s;
+          background-color: rgba( var( --dm-color-primary-rgb ), 0 );
+          transition: top 0.3s, right 0.3s, left 0.4s, filter 0.5s, border-radius 0.6s, border 0.1s, background-color 0.3s;
         }
         &:after {
           width: 100%;
@@ -143,6 +157,15 @@
     }
   }
   @container (max-width: 320px) {
+      &:hover {
+        > span {
+          > a {
+            > svg {
+              top: 5px;
+            }
+          }
+        }
+      }
       > div {
         > a {
           @include dm-font-medium();
@@ -173,6 +196,15 @@
     }
   }
   @media only screen and (max-width: $screen-phone-medium) {
+    &:hover {
+      > span {
+        > a {
+          > svg {
+            top: 5px;
+          }
+        }
+      }
+    }
     > div {
       > a {
         @include dm-font-medium();
