--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-portfolio-categories.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-portfolio-categories.scss
@@ -44,16 +44,16 @@
       }
     }
   }
-  @media only screen and (max-width: $screen-tablet-medium) {
+  @media only screen and (max-width: $screen-tablet-large) {
     > container {
       > div {
         > ul {
-          @include flex-column();
+          grid-template-columns: repeat(2, 1fr);
         }
       }
     }
   }
-  @media only screen and (max-width: $screen-tablet-medium) {
+  @media only screen and (max-width: $screen-tablet-small) {
     > container {
       > div {
         > h2 {
@@ -61,6 +61,9 @@
           --dm-text-heading3-color: var( --dm-color-white );
           --dm-text-heading3-font-family: var( --dm-font-family-secondary );
           --dm-text-heading3-letter-spacing: 4px;
+        }
+        > ul {
+          grid-template-columns: repeat(1, 1fr);
         }
       }
     }
