Page: Home - in progress
- Ocean Animation finished

--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/interface-design/variables.scss
@@ -6,6 +6,8 @@
     --dm-color-primary                  : #5d6977;
     --dm-color-secondary                : #1b2431;
     --dm-link-color                     : var( --dm-color-primary );
+    --dm-color-highlight-primary        : #FFD057;
+    --dm-color-highlight-secondary      : #FFF2D1;
 
     /* ---- Non-Colors ---- */
     --dm-color-black                    : #000000;
