--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-portfolio-categories.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-portfolio-categories.scss
@@ -3,8 +3,14 @@
 
 .dm-portfolio-categories {
   background-color: var( --dm-background-color-secondary );
+  background-image: linear-gradient( var( --dm-color-secondary ) 20%,
+                    var( --dm-color-primary ) 200%);
+  position: relative;
+  overflow: hidden;
 
   > container {
+    z-index: 1;
+
     > div {
       @include padding-x();
       @include flex-column();
@@ -16,17 +22,42 @@
         --dm-text-heading1-font-family: var( --dm-font-family-secondary );
         --dm-text-heading1-letter-spacing: var( --dm-spacing-primary );
         text-align: center;
+        background-image: linear-gradient(
+                        -225deg,
+                        var( --dm-color-white ) 0%,
+                        var( --dm-color-highlight-primary  ) 29%,
+                        var( --dm-color-highlight-secondary ) 67%,
+                        var( --dm-color-white ) 100%
+        );
+        background-size: auto auto;
+        background-clip: border-box;
+        background-size: 200% auto;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textclip 5s linear infinite;
+        display: inline-block;
 
         &:after {
           content: "";
+          position: absolute;
           display: block;
           height: 3px;
           width: 10%;
           max-width: 35%;
           margin: 4px auto;
           background-color: var( --dm-background-color-white );
-          -webkit-transition: width 0.5s ease,background-color 0.5s ease;
-          transition: width 0.5s ease,background-color 0.5s ease;
+          -webkit-transition: width 0.5s ease, background-color 0.5s ease;
+          transition: width 1s ease, background-color 0.5s ease;
+          animation: moveDivider 5s linear infinite;
+        }
+        &:hover {
+          &:after {
+            width: 15%;
+            transition: width 1s ease, background-color 0.5s ease;
+            background-color: var( --dm-color-highlight-primary );
+          }
         }
       }
       > ul {
@@ -43,6 +74,9 @@
         }
       }
     }
+  }
+  .ocean {
+    bottom: auto;
   }
   @media only screen and (max-width: $screen-tablet-large) {
     > container {
