--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -1,6 +1,9 @@
 @import "../templates-design/templates-design-parts/keyframes.scss";
 @import "../templates-design/templates-design-parts/ocean-animation.scss";
+@import "../templates-design/templates-design-parts/svg-list";
 @import "../templates-design/templates-design-parts/section-about.scss"; 
 @import "../templates-design/templates-design-parts/section-portfolio-categories.scss";
 @import "../templates-design/templates-design-parts/category-card.scss";
 @import "../templates-design/templates-design-parts/section-web-development-experience.scss";
+@import "../templates-design/templates-design-parts/section-web-development-description.scss";
+
