--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/keyframes.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/keyframes.scss
@@ -1,6 +1,6 @@
 @keyframes slideInLeft {
   0% {
-    transform: translateX(-100%);
+    transform: translateX(+100vw);
   }
   100% {
     transform: translateX(0);
@@ -9,7 +9,7 @@
 
 @keyframes slideInRight {
   0% {
-    transform: translateX(+100%);
+    transform: translateX(-100vw);
   }
   100% {
     transform: translateX(0);
