--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-about.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-about.scss
@@ -51,11 +51,7 @@
         > h2 {
           @include dm-font-heading1();
           --dm-text-heading1-font-family: var(--dm-font-family-secondary);
-          animation-duration: 0.8s;
-          animation-timing-function: ease-in-out;
-          animation-iteration-count: 1;
-          animation-name: slideInLeft, fadeIn;
-          animation-fill-mode: both;
+
 
           &:after {
             position: relative;
@@ -66,6 +62,7 @@
             height: 3px;
             background-color: var( --dm-color-primary );
             transition: max-width 0.3s;
+            transition-delay: 0.3s;
             animation-duration: 2s;
             animation-timing-function: ease-in-out;
             animation-iteration-count: 1;
@@ -82,17 +79,13 @@
         }
         p {
           word-break: break-word;
-          animation-duration: 1s;
-          animation-timing-function: ease-in-out;
-          animation-iteration-count: 1;
-          animation-name: slideInLeft, fadeIn;
-          animation-fill-mode: both;
+
         
           @for $j from 1 through 3 {
             $delay: ($j - 1) * 0.6s;
         
             &:nth-of-type(#{$j}) {
-              animation-delay: $delay;
+              transition-delay: $delay;
             }
           }
         }
