--- a/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-web-development-description.scss
+++ b/DM - Personal Portfolio/themes/dm-theme/assets/scss/templates-design/templates-design-parts/section-web-development-description.scss
@@ -38,8 +38,9 @@
           width: 100%;
           height: 100%;
           margin-bottom: 22px;
+          margin-bottom: 22px;
           padding-left: 0px;
-          transition: padding-left 0.8s;
+          transition: all 0.8s;
 
           > img {
             width: 100%;
