--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/templates-design/templates-design.scss
@@ -9,8 +9,10 @@
 @import "templates-design-parts/animation-blurred-lines.scss";
 
 @import "templates-design-parts/element-category-card.scss";
+@import "templates-design-parts/element-person-circle-card.scss";
 @import "templates-design-parts/element-theme-switcher.scss";
 
+@import "templates-design-parts/section-contact-data.scss";
 @import "templates-design-parts/section-about.scss";
 @import "templates-design-parts/section-portfolio-categories.scss";
 @import "templates-design-parts/section-web-development-experience.scss";
