--- a/DM-PersonalPortfolio/themes/dm-theme/assets/scss/structure-design/header.scss
+++ b/DM-PersonalPortfolio/themes/dm-theme/assets/scss/structure-design/header.scss
@@ -219,7 +219,7 @@
             .dm-menu {
                 position: fixed;
                 width: 400px;
-                height: 100%;
+                height: 100vh;
                 top: 0;
                 left: -450px;
                 flex-direction: column;
@@ -228,7 +228,7 @@
                 transition: 0.3s ease;
                 overflow: auto;
                 box-shadow: 3px 3px 17px #222;
- 
+
                 > ul {
                     padding: var( --dm-spacing-medium ) 0;
                     flex-direction: column;
